@@ -4,14 +4,14 @@
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="lower">1</property>
-    <property name="upper">1000</property>
+    <property name="upper">3000</property>
     <property name="value">1</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="adjustment2">
     <property name="lower">1</property>
-    <property name="upper">1000</property>
+    <property name="upper">200</property>
     <property name="value">1</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
@@ -245,6 +245,7 @@
                     <property name="has_focus">True</property>
                     <property name="headers_visible">False</property>
                     <property name="enable_search">False</property>
+                    <property name="enable_grid_lines">both</property>
                     <signal name="button-press-event" handler="on_tMatrix_button_press_event" swapped="no"/>
                     <signal name="cursor-changed" handler="on_tMatrix_cursor_changed" swapped="no"/>
                     <signal name="key-press-event" handler="on_tMatrix_key_press_event" swapped="no"/>
@@ -310,5 +311,8 @@
       <action-widget response="-6">matrix_button_cancel</action-widget>
       <action-widget response="-5">matrix_button_ok</action-widget>
     </action-widgets>
+    <child>
+      <placeholder/>
+    </child>
   </object>
 </interface>
