@@ -1,6 +1,7 @@
 2017-08-18 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Use glib-compile-resources for ui files (makes it easier to relocate or run the application without installing)
+	* Fix matrix/vector editing
 
 2017-08-17 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
